--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+nom = "5"
