Some starting point for ecl_vm.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 /target
 **/*.rs.bk
 Cargo.lock
+# swap
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
