Add an ECL parser.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ license = "GPL-3.0-or-later"
 
 [dependencies]
 nom = "5"
+encoding_rs = "0.8"
 image = { version = "0.22", default-features = false, features = ["png_codec"] }
 luminance = { version = "*", path = "../luminance/luminance" }
 luminance-glfw = { version = "*", path = "../luminance/luminance-glfw", default-features = false }
