Port the Enemy struct from Python, for now without its methods.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ luminance-derive = { version = "*", path = "../luminance/luminance-derive" }
 
 [profile.dev]
 panic = "abort"
+
+[profile.release]
+panic = "abort"
