--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ license = "GPL-3.0-or-later"
 nom = "5"
 encoding_rs = "0.8"
 image = { version = "0.22", default-features = false, features = ["png_codec"] }
+bitflags = "1"
 luminance = { version = "*", path = "../luminance/luminance" }
 luminance-glfw = { version = "*", path = "../luminance/luminance-glfw", default-features = false }
 luminance-derive = { version = "*", path = "../luminance/luminance-derive" }
